--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-flags": "^0.1.18",
+    "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "react-swipeable-views": "^0.13.4"
+    "react-swipeable-views": "^0.13.4",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
